--- a/pictures/sprouting_graph.tex
+++ b/pictures/sprouting_graph.tex
@@ -24,7 +24,7 @@
       align=center,
       minimum width = .4cm,
       minimum height = .4cm,
-      fill = red!70,
+%      fill = red!70,
       draw={black},
       ultra thick
    }
