--- a/aip.tex
+++ b/aip.tex
@@ -2446,8 +2446,9 @@ In order to do so, we first build a technical framework in which to carry out ou
    We start by describing what it means for $p$ to be large.
    Toward this, let $M_1, \ldots, M_l$ be the finitely many descendants of  $A$.
    Fix a positive integer $\denom$ that is a universal denominator for all $M_i$, as guaranteed by \Cref{universal-denominators-exist:  T}, and a finite set of representatives $\fsr(M_i)$ for each $M_i$, as in \Cref{fsr-exist: T}; set $\fsr = \fsr(M_1) \cup \cdots \cup \fsr(M_l)$.
-   By \Cref{rem: finitely many F-thresholds of small pairs} the set consisting of the $F$-thresholds of all small $A$-pairs is finite, and consequently so is the set $S$ consisting of all special points with denominator $\denom$ of all small $A$-pairs.
+   By \Cref{rem: finitely many F-thresholds of small pairs} the set consisting of the $F$-thresholds of all small $M_i$-pairs for $i=1,\ldots,l$ is finite, and consequently so is the set $S$ consisting of all special points with denominator $\denom$ of all small $M_i$-pairs.
    Let $\Omega$ be the set consisting of all coordinates of all points in $A(\fsr+S\cup\{\vv{0}\})$.
+   \pedro{$\vv{0}$ included so that this set contains $A(\fsr)$}
    We stress that $\fsr$, $S$, and $\Omega$ are finite sets determined by $A$, and do not depend in any way on $p$.
 
    The finiteness of $\fsr$  and \Cref{positive-polynomial: L}
