--- a/aip.tex
+++ b/aip.tex
@@ -144,7 +144,7 @@ They ask for conditions on $\ideala$ under which this uniformity, captured in th
 
 If $\ideala$ is \nuCool, then the constant term $G_r(0)$ is a root of the Bernstein--Sato polynomial of $\ideala$ at the origin, for each $r$ as above \cite[Remark~3.13]{mustata+takagi+watanabe.F-thresholds}.
 
-Budur, \mustata, and Saito showed that monomial ideals are \nuCool \cite[Theorem~4.1]{budur+mustata+saito.roots_bs_polys}.
+Budur, \mustata, and Saito showed that monomial ideals are \nuCool \cite[Theorem~4.1]{budur+mustata+saito.roots_bs_polys_monomial}.
 Specifically, they showed that if $\ideala$ is a proper, nontrivial monomial ideal in $\QQ[x_1,\ldots,x_\numvars]$, then there exists a positive integer $\denom$ with the following property:
 For each ideal $\idealb$ whose radical contains $\ideala$, there are positive rational numbers $\alpha$ and $\beta_r$, for $0 \le r < \denom$, such that
 \begin{equation}
