--- a/aip.tex
+++ b/aip.tex
@@ -118,18 +118,17 @@ TO DO LIST:
 \section{Introduction}
 
 \subsection{Main result}
-Let $\kk$ be a field of prime characteristic $p$ with $[\kk:\kk^p] < \infty$, and let $\ideala$ and $\idealb$ be nonzero proper ideals in $\kk[x_1,\ldots,x_\numvars]$ with $\ideala \subseteq \sqrt \idealb$.
+Let $\kk$ be a field of prime characteristic $p$ with $[\kk:\kk^p] < \infty$, and let $\ideala$ and $\idealb$ be nonzero proper ideals in the polynomial ring $\kk[x_1,\ldots,x_\numvars]$ with $\ideala \subseteq \sqrt \idealb$.
 For a nonnegative integer $e$, we set
 \begin{equation}
    \nu(\ideala,\idealb,p^e) \coloneqq \max\big\{\ell\in \NN : \ideala^{\ell} \not\subseteq \idealb^{[p^e]}\big\}
    \label{eq: nu definition}
 \end{equation}
 where $\idealb^{[p^e]} = \langle g^{p^e} : g \in \idealb \rangle$ is the $p^e$-th Frobenius power of $\idealb$.
-The condition that $\ideala \subseteq \sqrt \idealb$ guarantees that each $\nu(\ideala, \idealb, p^e)$ is a well-defined integer.
+The assumptions on~$\ideala$ and~$\idealb$ ensure that each $\nu(\ideala, \idealb, p^e)$ is a well-defined integer.
 
-Starting, instead, with ideals $\ideala$ and $\idealb$ in $\QQ[x_1,\ldots,x_\numvars]$ with $\ideala \subseteq \sqrt \idealb$, for each sufficiently large prime $p$ we have well-defined characteristic $p$ reductions $\ideala_p$ and $\idealb_p$ in $\FF_p[x_1,\ldots,x_\numvars]$; we may thus consider the numbers $\nu(\ideala_p,\idealb_p,p^e)$, and ask how these vary with $p$.
-Although little is known in general, a complete answer is known when $\ideala$ is a monomial ideal.
-Before getting to it, though, we examine some of the motivation behind this question.
+Starting, instead, with nonzero proper ideals $\ideala$ and $\idealb$ in $\QQ[x_1,\ldots,x_\numvars]$ with $\ideala \subseteq \sqrt \idealb$, for each sufficiently large prime $p$ we have well-defined characteristic $p$ reductions $\ideala_p$ and $\idealb_p$ in $\FF_p[x_1,\ldots,x_\numvars]$; we may thus consider the numbers $\nu(\ideala_p,\idealb_p,p^e)$, and ask how these vary with $p$.
+Although little is known in general, a complete answer is known when $\ideala$ is a monomial ideal---but before getting to it, we examine some of the motivation behind this question.
 
 \mustata, Takagi, and Watanabe observed that the images of the invariants $\nu(\ideala_p,\idealb_p,p^e)$ in $\FF_p$ are roots of the Bernstein--Sato polynomial of $\ideala$ at the origin, for each $p \gg 0$ \cite[Proposition~3.11]{mustata+takagi+watanabe.F-thresholds}.
 Furthermore, they noticed that $\nu(\ideala_p,\idealb_p,p^e)$ oftentimes (but not always) varies with $p$ in a uniform way---a behavior that allows them to find \emph{actual} roots of the Bernstein--Sato polynomial of $\ideala$ at the origin.
@@ -145,7 +144,7 @@ They ask for conditions on $\ideala$ under which this uniformity, captured in th
 If $\ideala$ is \nuCool, then the constant term $G_r(0)$ is a root of the Bernstein--Sato polynomial of $\ideala$ at the origin, for each $r$ as above \cite[Remark~3.13]{mustata+takagi+watanabe.F-thresholds}.
 
 Budur, \mustata, and Saito showed that monomial ideals are \nuCool \cite[Theorem~4.1]{budur+mustata+saito.roots_bs_polys_monomial}.
-Specifically, they showed that if $\ideala$ is a proper, nontrivial monomial ideal in $\QQ[x_1,\ldots,x_\numvars]$, then there exists a positive integer $\denom$ with the following property:
+Specifically, they showed that if $\ideala$ is a proper, nontrivial monomial ideal in $\QQ[x_1,\ldots,x_\numvars]$, then there exists a positive integer $\denom = \denom(\ideala)$ with the following property:
 For each ideal $\idealb$ whose radical contains $\ideala$, there are positive rational numbers $\alpha$ and $\beta_r$, for $0 \le r < \denom$, such that
 \begin{equation}
    \label{eq: nu-uniformity for monomial ideals}
@@ -154,7 +153,7 @@ For each ideal $\idealb$ whose radical contains $\ideala$, there are positive ra
 whenever $p^e \gg 0$ and $p \equiv r \bmod \denom$.
 
 In this paper we prove an analogous result for a family of analogous invariants, where the standard power $\ideala^\ell$ in \eqref{eq: nu definition} is replaced with the (generalized) Frobenius power $\ideala^{[\ell]}$, introduced by the authors in \cite{hernandez+etal.frobenius_powers}.
-\pedro{We could put here the text highlighted in red below, that just explains what $\ideala^{[\ell]}$ is.}
+%\pedro{We could put here the text highlighted in red below, that just explains what $\ideala^{[\ell]}$ is.}
 If $\kk$ is as above and $\ideala$ and $\idealb$ are nonzero proper ideals of $\kk[x_1, \ldots, x_\numvars]$ with $\ideala \subseteq \sqrt{\idealb}$, then for each nonnegative integer $e$ we define
 \[\mu(\ideala,\idealb,p^e) \coloneqq \max\big\{\ell\in \NN : \ideala^{[\ell]} \not\subseteq \idealb^{[p^e]}\big\}.\]
 
@@ -164,11 +163,12 @@ If $\kk$ is as above and $\ideala$ and $\idealb$ are nonzero proper ideals of $\
 \end{definition}
 
 Our main result shows that monomial ideals are \muCool.
-\begin{thmintro}[(REF)]
+\begin{thmintro}[\textcolor{nicered}{ADD CROSS-REFERENCE}]
    \label{main theorem}
    Every nonzero proper monomial ideal of $\QQ[x_1,\ldots,x_\numvars]$ is \muCool.
 \end{thmintro}
-Along the way we recover the aforementioned theorem of Budur, \mustata, and Saito (REF), interpreting the coefficients in \eqref{eq: nu-uniformity for monomial ideals} in the context of certain optimization problems, whose study constitute the core of this work. 
+
+Along the way we recover the aforementioned theorem of Budur, \mustata, and Saito \textcolor{nicered}{(ADD CROSS-REFERENCE)}, interpreting the coefficients in \eqref{eq: nu-uniformity for monomial ideals} in the context of certain optimization problems, whose study comprise the bulk of this work. 
 We also describe each coefficient of the polynomials determining $\mu(\ideala_p,\idealb_p,p^e)$, which are typically not as simple as \eqref{eq: nu-uniformity for monomial ideals}, in term of optimization problems.
 The following examples give a taste of the formulas obtained.
 
@@ -183,19 +183,27 @@ The following examples give a taste of the formulas obtained.
 
 \begin{example}
    Now consider the ideals $\ideala = \ideal{x^{36} y^{19} z^{47}, x^{10} y^{46} z^{25}, x^{31} y^{31} z^{36}}$ and $\ideald = \ideal{x^{29},y^{24},z^{30}}$ of $\QQ[x,y,z]$.
+   Given integers $a$ and $b$, we denote by $\lpr{a}{b}$ the least positive residue of $a$ modulo $b$.
    We shall see in \Cref{ex: new example.2} that, for $e \ge 4$,
-     \[
+   \[
       \mu(\ideala_p,\ideald_p,p^e) =
-      \begin{cases}
-         \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{21}{25} & \text{if $e \equiv 0 \bmod 5$}\\[1mm]
-         \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{6}{25} & \text{if $e \equiv 1 \bmod 5$}\\[1mm]
-         \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{16}{25} & \text{if $e \equiv 2 \bmod 5$}\\[1mm]
-         \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{1}{25} & \text{if $e \equiv 3 \bmod 5$}\\[1mm]
-         \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{11}{25} & \text{if $e \equiv 4 \bmod 5$}
-      \end{cases}
+      \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{\lpr{21+10e}{25}}{25}
    \]
+   %   \[
+   %    \mu(\ideala_p,\ideald_p,p^e) =
+   %    \begin{cases}
+   %       \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{21}{25} & \text{if $e \equiv 0 \bmod 5$}\\[1mm]
+   %       \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{6}{25} & \text{if $e \equiv 1 \bmod 5$}\\[1mm]
+   %       \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{16}{25} & \text{if $e \equiv 2 \bmod 5$}\\[1mm]
+   %       \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{1}{25} & \text{if $e \equiv 3 \bmod 5$}\\[1mm]
+   %       \frac{624}{773}p^{e} - \frac{1551}{681013}p^{e-1} - \frac{2794}{22025}p^{e-3} - \frac{11}{25} & \text{if $e \equiv 4 \bmod 5$}
+   %    \end{cases}
+   % \]
    whenever $p \gg 0$  and $p \equiv 11 \bmod 752523984455421061348766569800$.
-   \pedro{Probably it makes sense to be less precise here, and just say that this holds for infinitely many $p$ in some congruence class. }
+   \pedro{
+      This is a bit ridiculous;
+      probably it makes sense to be less precise here, and just say that this holds for infinitely many $p$ in some congruence class.
+   }
 \end{example}
 
 \subsection{Frobenius powers}
@@ -216,14 +224,15 @@ If $\kk$ is, again, a field of prime characteristic $p$ with $[\kk:\kk^p] <\inft
    If $\ell$ is a natural number, and $\ideala$ is generated by polynomials $f_1, \ldots, f_n$, then $\ideala^{[\ell]}$ is the ideal generated by the products $f^{\vv{u}} = f_1^{u_1}\cdots f_n^{u_n}$, ranging over all points $\vv{u} \in \NN^n$ for which the multinomial coefficient $\binom{\ell}{\vv{u}}$ is nonzero modulo~$p$ \cite[Proposition~3.5]{hernandez+etal.frobenius_powers}.}
 \pedro{This may be omitted; if so, just remember to remove the ``as seen in the introduction'' in Section~3, when this is brought up again.}
 \emily{I think we can omit it, since it will be described when we use it.  Do you prefer to keep it?}
-
+\pedro{No, I think I prefer to omit it.}
 Suppose now that $\ideala$ is generated by monomials $x^{\vv{a}_1},\ldots,x^{\vv{a}_n}$.
 Unlike the test ideals $\tau(\ideala^t)$, the Frobenius powers $\ideala^{[t]}$ strongly depend on the characteristic~$p$.
 Moreover, if $f=\alpha_1x^{\vv{a}_1}+\cdots+\alpha_nx^{\vv{a}_n}$ for some $\alpha_1,\ldots,\alpha_n \in \kk$ that are algebraically independent over $\FF_p$ and generate $\kk$ over $\FF_p$, then for each $t \in (0,1)$ we have
 \[\tau(f^t) = \ideal{f}^{[t]} = \ideala^{[t]}.\]
 
 \subsection{Critical exponents}
-Like multiplier and test ideals, the Frobenius powers $\ideala^{[t]}$ form a nonincreasing chain of ideals, that remains constant for small increments of the parameter, and only changes at a discrete set of rational numbers called \emph{critical exponents}---the analogues of the jumping numbers of multiplier ideals, or the $F$-jumping numbers of test ideals.
+
+Like multiplier and test ideals, the Frobenius powers $\ideala^{[t]}$ form a nonincreasing chain of ideals, that remains constant for small increments of the parameter, and only changes at a discrete set of rational numbers called \emph{critical exponents}---the analogues of the jumping numbers of multiplier ideals, or the $F$-jumping exponents of test ideals.
 
 Critical exponents can be more concretely realized as rates of growth of the numbers $\mu(\ideala,\idealb,p^e)$ which are the focus of this manuscript.
 If $\ideala$ and $\idealb$ are nonzero proper ideals with $\ideala \subseteq \sqrt \idealb$, then the sequence $\big(\mu(\ideala,\idealb,p^e)/p^e\big)_{e=0}^\infty$ is bounded and nondecreasing; the \emph{critical exponent of $\ideala$ with respect to $\idealb$} is the limit
@@ -3518,9 +3527,11 @@ for every $A[\ell^{-1}]$-algebra $B$ \hl{that happens to be a field}.
    After replacing $\ell$ with $a \ell$, we may assume that $a$ is a unit in $A[\ell^{-1}]$.
    For the remainder of this proof, let $B$ be an $A[\ell^{-1}]$-algebra that happens to be a field.
 
-   If $x^{\vv{u}} \in \mon(J)$, then $a x^{\vv{u}} \in J \subseteq JB[x]$.  Furthermore, as $a$ is a unit in $A[\ell^{-1}]$, it must map to a unit in $B$, which allows us to conclude that $x^{\vv{u}} \in \mon(JB[x])$.   %As $x^{\vv{u}} \in \mon(J)$ was arbitrary, this demonstrates that $\mon(J) B[x]$ lies in $\mon(J B[x])$.
+   If $x^{\vv{u}} \in \mon(J)$, then $a x^{\vv{u}} \in J \subseteq JB[x]$.
+   Furthermore, as $a$ is a unit in $A[\ell^{-1}]$, it must map to a unit in $B$, which allows us to conclude that $x^{\vv{u}} \in \mon(JB[x])$.
 
-   Now suppose that $x^{\vv{u}} \in \mon(JB[x])$.  As $B$ is a field, this simply means that $x^{\vv{u}} \in JB[x]$, and  \Cref{all monomial colons: C} allows us to rewrite this as
+   Now suppose that $x^{\vv{u}} \in \mon(JB[x])$.
+   As $B$ is a field, this simply means that $x^{\vv{u}} \in JB[x]$, and \Cref{all monomial colons: C} allows us to rewrite this as
    \[(J:_{A[x]} x^{\vv{u}}) B[x] = (JB[x] :_{B[x]} x^{\vv{u}}) = B[x].\]
    \Cref{comparing expansions:  P} and our choice of $\ell$ then imply that $(J:_{A[x]} x^{\vv{u}}) A[\ell^{-1},x] = A[\ell^{-1},x]$.
    \pedro{or $A[\ell^{-1}][x]$; I prefer the simpler notation}
